k8s/templates/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 4000
    targetPort: 4000
